# cryptozavr

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  fastmcp.json  gemini-extension.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: README.md
.cursor-plugin/: README.md
.github/workflows/: ci.yml  plugin-validate.yml
.opencode/: README.md
agents/: crypto-researcher.md
commands/: analyze.md  health.md  history.md  ohlcv.md  research.md  resolve.md  ticker.md  trending.md
docs/: README.claude-code.md  README.codex.md  README.md  README.opencode.md  dev-workflow-contract.md  llm-study-guide.md  plugin-cli-reference.md
docs/checks/: 2026-04-22T01-52-21Z-phase-1.5-errors.md
docs/lessons/: 2026-04-22-long-poll-watcher-pattern.md
docs/ralph-prompts/: phase-1.5.md
docs/superpowers/: m2.4-smoke-test.md  m2.8-smoke-test.md
docs/superpowers/plans/: 2026-04-21-cryptozavr-m1-bootstrap.md  2026-04-21-cryptozavr-m2.1-domain-layer.md  2026-04-21-cryptozavr-m2.2-supabase-gateway.md  2026-04-21-cryptozavr-m2.3a-core-providers.md  2026-04-21-cryptozavr-m2.3b-decorators-state-coingecko.md  2026-04-21-cryptozavr-m2.3c-chain-factory.md  2026-04-21-cryptozavr-m2.4-first-mcp-tool.md  2026-04-21-cryptozavr-m2.5-get-ohlcv-and-integration.md  2026-04-21-cryptozavr-m2.6-order-book-and-trades.md  2026-04-21-cryptozavr-m2.7-realtime-and-cloud-supabase.md  2026-04-22-cryptozavr-m2.8-production-plugin.md  2026-04-22-cryptozavr-m3.0-fastmcp-idiomatic-cleanup.md  2026-04-22-cryptozavr-m3.1-market-analyzer.md  2026-04-22-cryptozavr-m3.2-discovery-tools.md  2026-04-22-cryptozavr-m3.3-analytics-tools.md  2026-04-22-cryptozavr-m3.4-history-streaming-explainer.md  2026-04-22-paper-trading-ledger-implementation.md  2026-04-22-phase-2-subproject-a-backtest-engine.md  2026-04-22-phase-2a-strategy-spec.md  2026-04-22-phase-2c-backtest-visitors.md  2026-04-22-phase-2d-to-phase-5-master-plan.md  2026-04-22-phase-3-risk-engine-plan.md  2026-04-22-position-watcher-implementation.md
docs/superpowers/specs/: 2026-04-21-cryptozavr-mvp-design.md  2026-04-22-paper-trading-ledger-design.md  2026-04-22-phase-2-subproject-a-backtest-engine-design.md  2026-04-22-phase-2a-strategy-spec-design.md  2026-04-22-phase-2b-backtest-engine-decomposition.md  2026-04-22-phase-2b1-indicator-engine-design.md  2026-04-22-phase-2b2-condition-evaluator-design.md  2026-04-22-phase-2c-backtest-visitors-design.md  2026-04-22-phase-3-risk-engine-design.md  2026-04-22-position-watcher-design.md  2026-04-22-scalping-infrastructure-roadmap.md
hooks/: hooks.json  session-start.sh
scripts/: bootstrap-supabase.sh  validate-plugin.py
skills/crypto-research/: SKILL.md
skills/interpreting-market-data/: SKILL.md
skills/post-session-reflection/: SKILL.md
skills/strategy-review/: SKILL.md
skills/venue-debug/: SKILL.md
src/cryptozavr/: __init__.py
src/cryptozavr/domain/: paper.py  (+11 more)
supabase/: config.toml  seed.sql
supabase/migrations/: 00000000000000_extensions.sql  00000000000010_reference.sql  00000000000020_market_data.sql  00000000000030_audit.sql  00000000000040_rls.sql  00000000000050_cron.sql  00000000000060_realtime.sql  00000000000070_strategy_specs.sql  00000000000080_risk_policies.sql  00000000000090_paper_trades.sql
tests/: conftest.py
tests/contract/: test_coingecko_provider_contract.py  test_kucoin_provider_contract.py  test_paper_trade_repo.py
tests/integration/: conftest.py  test_migrations_apply.py  test_ohlcv_roundtrip.py  test_paper_ledger_live.py  test_query_log_insert.py  test_tickers_upsert.py  test_watch_kucoin_live.py
(+263 files in other folders)
