[project]
name = "cryptozavr"
version = "0.0.1"
description = "Risk-first crypto market research plugin for Claude Code"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "cryptozavr", email = "e.a.gurin@outlook.com" }
]
requires-python = ">=3.12,<3.14"
keywords = ["crypto", "market-data", "research", "fastmcp", "supabase", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.2.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
]

[project.optional-dependencies]
m2 = [
    "asyncpg>=0.29",
    "supabase>=2.8",
    "realtime>=2.0",
    "ccxt>=4.4",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-xdist>=3.6",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "dirty-equals>=0.8",
    "hypothesis>=6.100",
    "polyfactory>=2.18",
    # M2 runtime deps also needed for dev (mappers, gateway unit tests)
    "asyncpg>=0.29",
    "supabase>=2.8",
    "realtime>=2.0",
    # M2.3 additions
    "ccxt>=4.4",
    "httpx>=0.27",
    "respx>=0.21",
    "freezegun>=1.5",
]

[project.scripts]
cryptozavr-server = "cryptozavr.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptozavr"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific
    "TID", # flake8-tidy-imports
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",     # line-too-long handled by formatter
    "PLR0913",  # too-many-arguments (design choice for DI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]  # magic values & asserts OK in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ccxt.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = ["error"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: unit tests (fast, no I/O)",
    "contract: contract tests against saved fixtures",
    "integration: integration tests (require supabase start)",
    "mcp: MCP server direct-call tests",
    "e2e: end-to-end tests (STDIO roundtrip)",
]

[tool.coverage.run]
source = ["src/cryptozavr"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
